package enums;


public enum TipoCarta {
	TRADICIONAL,
	UNO;
}
